BUG#18962: Crash of ALTER TABLE .. DROP PARTITION ... Review fixes

sql/partition_info.cc:
  Review fixes
sql/partition_info.h:
  Review fixes